[package]
name = "scylla"
version = "0.1.0"
edition = "2024"

[lib]
name = "scylla"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "experimental-async", "bigdecimal", "num-bigint", "uuid", "chrono", "time"] }
tokio = { version = "1.42.0", features = ["full"] }
scylla = { git = "https://github.com/scylladb-zpp-2025-python-rs-driver/scylla-rust-driver", features = ["chrono-04", "bigdecimal-04", "num-bigint-04"]}
scylla-cql = { git = "https://github.com/scylladb-zpp-2025-python-rs-driver/scylla-rust-driver", features = ["chrono-04", "bigdecimal-04", "num-bigint-04"]}
bigdecimal-04 = { package = "bigdecimal", version = "0.4" }
chrono_04 = { package = "chrono", version = "0.4" }
num-bigint-04 = { package = "num-bigint", version = "0.4" }

yoke = "0.8.1"
stable_deref_trait = "1.2"
uuid = "1.18.1"