[package]
name = "scylla"
version = "0.1.0"
edition = "2024"

[lib]
name = "scylla"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.2", features = ["extension-module", "experimental-async", "bigdecimal", "num-bigint", "uuid", "chrono", "time", "py-clone"] }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1.42.0", features = ["full"] }
scylla = { git = "https://github.com/scylladb-zpp-2025-python-rs-driver/scylla-rust-driver", features = ["chrono-04", "bigdecimal-04", "num-bigint-04"]}
scylla-cql = { git = "https://github.com/scylladb-zpp-2025-python-rs-driver/scylla-rust-driver", features = ["chrono-04", "bigdecimal-04", "num-bigint-04"]}

yoke = "0.8.1"
stable_deref_trait = "1.2"
thiserror = "2.0.6"
uuid = { version = "1.11.0", features = ["v4"] }
bigdecimal = "0.4"
chrono = "0.4"
num-bigint = "0.4"