[package]
name = "scylla"
version = "0.1.0"
edition = "2024"

[features]
default = ["python-extension"]
python-extension = ["pyo3/extension-module"]

[lib]
name = "scylla"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28.2", features = ["experimental-async", "bigdecimal", "num-bigint", "uuid", "chrono", "time", "py-clone"] }
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
tokio = { version = "1.42.0", features = ["full"] }

scylla = { git = "https://github.com/scylladb/scylla-rust-driver", rev = "ea6ed753521d145927ff12e83a62f5b0b547c402", features = ["chrono-04", "bigdecimal-04", "num-bigint-04", "unstable-python-rs", "openssl-010"] }
scylla-cql-core = { git = "https://github.com/scylladb/scylla-rust-driver", rev = "ea6ed753521d145927ff12e83a62f5b0b547c402", features = ["chrono-04", "bigdecimal-04", "num-bigint-04", "unstable-python-rs"] }
scylla-cql = { git = "https://github.com/scylladb/scylla-rust-driver", rev = "ea6ed753521d145927ff12e83a62f5b0b547c402", features = ["chrono-04", "bigdecimal-04", "num-bigint-04", "unstable-python-rs"] }

yoke = "0.8.1"
stable_deref_trait = "1.2"
thiserror = "2.0.6"
uuid = { version = "1.11.0", features = ["v4"] }
bigdecimal = "0.4"
chrono = "0.4"
num-bigint = "0.4"
async-trait = "0.1.89"
log = "0.4.29"
tracing = { version = "0.1", features = ["log"] }
pyo3-log = "0.13.3"
openssl = { version = "0.10"}