[project]
name = "python-rs-driver-docs"
description = "ScyllaDB Python RS Driver Documentation"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pygments>=2.18.0",
    "sphinx>=8.0.0",
    "sphinx-scylladb-theme>=1.9.0",
    "myst-parser>=5.0.0",
    "sphinx-autobuild>=2025.0",
    "sphinx-autodoc-typehints>=3.0.0",
]